[gd_scene load_steps=24 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://stairs_up.obj" type="ArrayMesh" id=2]
[ext_resource path="res://ramp.obj" type="ArrayMesh" id=3]
[ext_resource path="res://Checkered.png" type="Texture" id=4]
[ext_resource path="res://Ladder.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Concrete.tscn" type="PackedScene" id=6]
[ext_resource path="res://ConcreteBlocks.meshlib" type="MeshLibrary" id=7]
[ext_resource path="res://noon_grass_2k.hdr" type="Texture" id=8]
[ext_resource path="res://Gary.gd" type="Script" id=9]
[ext_resource path="res://Light.tscn" type="PackedScene" id=10]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.300781, 0.298431, 0.298431, 1 )
metallic_specular = 0.0
normal_enabled = true
normal_scale = 1.0

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.441406, 0.441406, 0.441406, 1 )
metallic_specular = 0.0
ao_enabled = true
ao_light_affect = 0.0
ao_on_uv2 = false
ao_texture_channel = 0

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -1, 1.1992, -0.9995, -1, 1, -1, -1, 1.1992, 1, -1, 1.1992, 1, -1, 1, -1, -1, 0, 1, -1.5, 1.1992, 1, -1.5, 0, 1, -1.5, 1.1992, -1.5, -1.5, 1.1992, -1.5, -1.5, 0, 1, -1.5, 0, -1.5, -1.5, 1.1992, -1.5, -1.5, 0, -1.5, 1.5, 1.1992, -1.5, 1.5, 1.1992, -1.5, -1.5, 0, -1.5, 1.5, 0, -1.5, -1, 1, -1, -1, 1.1992, -0.9995, 1, 1, -1, 1, 1, -1, -1, 1.1992, -0.9995, 1, 1.1992, -0.9995, 1, 1, -1, 1, 1.1992, -0.9995, 1, 0, 1, 1, 0, 1, 1, 1.1992, -0.9995, 0.9995, 1.1992, 1, 1.5, 1.1992, -1.5, 1.5, 0, -1.5, 1.499, 1.1992, 1, 1.499, 1.1992, 1, 1.5, 0, -1.5, 1.5, 0, 1, -1, 1.1992, 1, -1, 0, 1, -1.0332, 1.1992, 1.125, -1.0332, 1.1992, 1.125, -1, 0, 1, -1.0332, 0.0003, 1.125, -1.0332, 1.1992, 1.125, -1.0332, 0.0003, 1.125, -1.124, 1.1992, 1.2158, -1.124, 1.1992, 1.2158, -1.0332, 0.0003, 1.125, -1.124, 0.0003, 1.2158, -1.124, 1.1992, 1.2158, -1.124, 0.0003, 1.2158, -1.25, 1.1992, 1.25, -1.25, 1.1992, 1.25, -1.124, 0.0003, 1.2158, -1.25, 0.0003, 1.25, -1.25, 1.1992, 1.25, -1.25, 0.0003, 1.25, -1.375, 1.1992, 1.2158, -1.375, 1.1992, 1.2158, -1.25, 0.0003, 1.25, -1.375, 0.0003, 1.2158, -1.375, 1.1992, 1.2158, -1.375, 0.0003, 1.2158, -1.4658, 1.1992, 1.125, -1.4658, 1.1992, 1.125, -1.375, 0.0003, 1.2158, -1.4658, 0.0003, 1.125, -1.4658, 1.1992, 1.125, -1.4658, 0.0003, 1.125, -1.5, 1.1992, 1, -1.5, 1.1992, 1, -1.4658, 0.0003, 1.125, -1.5, 0, 1, 1.0332, 1.1992, 1.125, 1.0332, 0.0003, 1.125, 0.9995, 1.1992, 1, 0.9995, 1.1992, 1, 1.0332, 0.0003, 1.125, 1, 0, 1, 1.124, 1.1992, 1.2158, 1.124, 0.0003, 1.2158, 1.0332, 1.1992, 1.125, 1.0332, 1.1992, 1.125, 1.124, 0.0003, 1.2158, 1.0332, 0.0003, 1.125, 1.25, 1.1992, 1.25, 1.25, 0.0003, 1.25, 1.124, 1.1992, 1.2158, 1.124, 1.1992, 1.2158, 1.25, 0.0003, 1.25, 1.124, 0.0003, 1.2158, 1.375, 1.1992, 1.2158, 1.375, 0.0003, 1.2158, 1.25, 1.1992, 1.25, 1.25, 1.1992, 1.25, 1.375, 0.0003, 1.2158, 1.25, 0.0003, 1.25, 1.4658, 1.1992, 1.125, 1.4658, 0.0003, 1.125, 1.375, 1.1992, 1.2158, 1.375, 1.1992, 1.2158, 1.4658, 0.0003, 1.125, 1.375, 0.0003, 1.2158, 1.499, 1.1992, 1, 1.5, 0, 1, 1.4658, 1.1992, 1.125, 1.4658, 1.1992, 1.125, 1.5, 0, 1, 1.4658, 0.0003, 1.125, -1.5996, 1.3994, -1.5996, -1.5996, 1.1992, -1.5996, 1.5996, 1.3994, -1.5996, 1.5996, 1.3994, -1.5996, -1.5996, 1.1992, -1.5996, 1.5996, 1.1992, -1.5996, -1, 1.3994, -1, 1, 1.3994, -1, -1, 1.1992, -1, -1, 1.1992, -1, 1, 1.3994, -1, 0.9995, 1.1992, -1, 0.9995, 1.1992, -1, 1.5996, 1.1992, -1.5996, -1, 1.1992, -1, -1, 1.1992, -1, 1.5996, 1.1992, -1.5996, -1.5996, 1.1992, -1.5996, -1, 1.3994, -1, -1.5996, 1.3994, -1.5996, 1, 1.3994, -1, 1, 1.3994, -1, -1.5996, 1.3994, -1.5996, 1.5996, 1.3994, -1.5996, -1.5996, 1.3994, -1.5996, -1, 1.3994, -1, -1.5996, 1.3994, 1.2998, -1.5996, 1.3994, 1.2998, -1, 1.3994, -1, -1, 1.3994, 1.2998, -1, 1.1992, -1, -1.5996, 1.1992, -1.5996, -1, 1.1992, 1.2998, -1, 1.1992, 1.2998, -1.5996, 1.1992, -1.5996, -1.5996, 1.1992, 1.2998, 1, 1.3994, -1, 1.5996, 1.3994, -1.5996, 1, 1.3994, 1.2998, 1, 1.3994, 1.2998, 1.5996, 1.3994, -1.5996, 1.5996, 1.3994, 1.2998, 1.5996, 1.1992, -1.5996, 0.9995, 1.1992, -1, 1.5996, 1.1992, 1.2998, 1.5996, 1.1992, 1.2998, 0.9995, 1.1992, -1, 0.9995, 1.1992, 1.2998, -1, 1.3994, -1, -1, 1.1992, -1, -1, 1.3994, 1.2998, -1, 1.3994, 1.2998, -1, 1.1992, -1, -1, 1.1992, 1.2998, 0.9995, 1.1992, -1, 1, 1.3994, -1, 0.9995, 1.1992, 1.2998, 0.9995, 1.1992, 1.2998, 1, 1.3994, -1, 1, 1.3994, 1.2998, -1.5996, 1.1992, -1.5996, -1.5996, 1.3994, -1.5996, -1.5996, 1.1992, 1.2998, -1.5996, 1.1992, 1.2998, -1.5996, 1.3994, -1.5996, -1.5996, 1.3994, 1.2998, 1.5996, 1.3994, -1.5996, 1.5996, 1.1992, -1.5996, 1.5996, 1.3994, 1.2998, 1.5996, 1.3994, 1.2998, 1.5996, 1.1992, -1.5996, 1.5996, 1.1992, 1.2998, -1, 1.1992, 1.2998, -1.5996, 1.1992, 1.2998, -1, 1.3994, 1.2998, -1, 1.3994, 1.2998, -1.5996, 1.1992, 1.2998, -1.5996, 1.3994, 1.2998, 1, 1.3994, 1.2998, 1.5996, 1.3994, 1.2998, 0.9995, 1.1992, 1.2998, 0.9995, 1.1992, 1.2998, 1.5996, 1.3994, 1.2998, 1.5996, 1.1992, 1.2998, -1, 0.2, 0.5996, 1, 0.2, 0.5996, -1, 0.2, 1, -1, 0.2, 1, 1, 0.2, 0.5996, 0.9995, 0.2, 1, 0.9995, 0.2, 1, 1, 0, 1, -1, 0.2, 1, -1, 0.2, 1, 1, 0, 1, -1, 0, 1, 1, 0.3999, 0.5996, 1, 0.2, 0.5996, -1, 0.3999, 0.5996, -1, 0.3999, 0.5996, 1, 0.2, 0.5996, -1, 0.2, 0.5996, 1, 0.3999, 0.2, 1, 0.3999, 0.5996, -1, 0.3999, 0.2, -1, 0.3999, 0.2, 1, 0.3999, 0.5996, -1, 0.3999, 0.5996, 1, 0.5996, 0.2, 1, 0.3999, 0.2, -1, 0.5996, 0.2, -1, 0.5996, 0.2, 1, 0.3999, 0.2, -1, 0.3999, 0.2, 1, 0.5996, -0.2, 1, 0.5996, 0.2, -1, 0.5996, -0.2, -1, 0.5996, -0.2, 1, 0.5996, 0.2, -1, 0.5996, 0.2, 1, 0.7998, -0.2, 1, 0.5996, -0.2, -1, 0.7998, -0.2, -1, 0.7998, -0.2, 1, 0.5996, -0.2, -1, 0.5996, -0.2, 1, 0.7998, -0.5996, 1, 0.7998, -0.2, -1, 0.7998, -0.5996, -1, 0.7998, -0.5996, 1, 0.7998, -0.2, -1, 0.7998, -0.2, 1, 1, -0.5996, 1, 0.7998, -0.5996, -1, 1, -0.5996, -1, 1, -0.5996, 1, 0.7998, -0.5996, -1, 0.7998, -0.5996, 1, 1, -0.9995, 1, 1, -0.5996, -1, 1, -1, -1, 1, -1, 1, 1, -0.5996, -1, 1, -0.5996 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1.5, 0.1, 1.5 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.601563, 0.222502, 0.0563965, 1 )
metallic_specular = 0.0

[sub_resource type="CubeMesh" id=6]
material = SubResource( 5 )
size = Vector3( 40, 0.2, 20 )

[sub_resource type="ConvexPolygonShape" id=7]
points = PoolVector3Array( -20, 0.0999756, 10, 20, 0.0999756, -10, 20, 0.0999756, 10, -20, 0.0999756, -10, -20, -0.0999756, 10, 20, -0.0999756, -10, 20, -0.0999756, 10, -20, -0.0999756, -10, 20, 0.0999756, 10, -20, 0.0999756, -10, 20, 0.0999756, -10, -20, 0.0999756, 10, 20, -0.0999756, 10, -20, -0.0999756, -10, 20, -0.0999756, -10, -20, -0.0999756, 10, 20, 0.0999756, 10, -20, -0.0999756, 10, -20, 0.0999756, 10, 20, -0.0999756, 10, 20, 0.0999756, -10, -20, -0.0999756, -10, -20, 0.0999756, -10, 20, -0.0999756, -10 )

[sub_resource type="SpatialMaterial" id=8]
albedo_texture = ExtResource( 4 )
roughness = 0.0

[sub_resource type="ConvexPolygonShape" id=9]
points = PoolVector3Array( 50, -0.0999756, 10, 50, -0.0999756, -10, -50, -0.0999756, 9.99219, -49.9688, -0.0999756, -10, -49.9688, 0.0999756, -10, 50, 0.0999756, -9.99219, -50, 0.0999756, 9.99219, 49.9688, 0.0999756, 10, 50, 0.0999756, -9.99219, 50, -0.0999756, -10, 49.9688, 0.0999756, 10, 50, -0.0999756, 10, 49.9688, 0.0999756, 10, 50, -0.0999756, 10, -50, 0.0999756, 9.99219, -50, -0.0999756, 9.99219, -50, 0.0999756, 9.99219, -50, -0.0999756, 9.99219, -49.9688, 0.0999756, -10, -49.9688, -0.0999756, -10, 50, -0.0999756, -10, 50, 0.0999756, -9.99219, -49.9688, -0.0999756, -10, -49.9688, 0.0999756, -10 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 0.1, 1.2, 0.2 )

[sub_resource type="PanoramaSky" id=11]
panorama = ExtResource( 8 )

[sub_resource type="Environment" id=12]
background_mode = 2
background_sky = SubResource( 11 )
background_energy = 0.4
ambient_light_color = Color( 0.510864, 0.685101, 0.703125, 1 )
tonemap_mode = 2

[sub_resource type="CapsuleShape" id=13]
radius = 0.6
height = 2.0

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="Stairs_Gray" type="MeshInstance" parent="."]
editor/display_folded = true
transform = Transform( 3.14005, 0, 0, 0, 3.14005, 0, 0, 0, 3.14005, 8.30362, -10.951, 0 )
mesh = ExtResource( 2 )
material/0 = SubResource( 1 )
material/1 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Stairs_Gray"]

[node name="CollisionShape" type="CollisionShape" parent="Stairs_Gray/StaticBody"]
shape = SubResource( 3 )

[node name="CollisionShape2" type="CollisionShape" parent="Stairs_Gray/StaticBody"]
transform = Transform( 1, 0, 0, 0, 0.863586, -0.504201, 0, 0.504201, 0.863586, 0, 0.566088, 0.233063 )
visible = false
shape = SubResource( 4 )
disabled = true

[node name="OrangeRamp" type="MeshInstance" parent="."]
editor/display_folded = true
transform = Transform( 0.931328, 0.364182, 0, -0.364182, 0.931328, 0, 0, 0, 1, -30.1531, -3.58865, 27.4108 )
mesh = SubResource( 6 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="OrangeRamp"]

[node name="CollisionShape" type="CollisionShape" parent="OrangeRamp/StaticBody"]
shape = SubResource( 7 )

[node name="Ramp" type="MeshInstance" parent="."]
editor/display_folded = true
transform = Transform( -5.5841e-008, -3.30798e-009, 1, -0.669131, 0.743145, -3.49066e-008, -0.743145, -0.669131, -4.37114e-008, 21.3817, 13.2722, 54.5793 )
mesh = ExtResource( 3 )
material/0 = SubResource( 8 )

[node name="StaticBody" type="StaticBody" parent="Ramp"]

[node name="CollisionShape" type="CollisionShape" parent="Ramp/StaticBody"]
shape = SubResource( 9 )

[node name="Ladder" type="MeshInstance" parent="."]
editor/display_folded = true
transform = Transform( -4.37114e-007, 0, 10, 0, 10, 0, -10, 0, -4.37114e-007, -16.547, -9.68952, -47.0396 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null
material/2 = null

[node name="Area" type="Area" parent="Ladder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.12381, 0 )
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="Ladder/Area"]
shape = SubResource( 10 )

[node name="Concrete" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.19478, -7.56525, -11.0079 )

[node name="Concrete2" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.54546, -3.82433, -12.326 )

[node name="Concrete3" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.54546, -0.508605, 1.30655 )

[node name="XGrid" type="GridMap" parent="."]
mesh_library = ExtResource( 7 )
cell_size = Vector3( 12, 12, 12 )
cell_center_x = false
data = {
"cells": PoolIntArray( 5, 0, 196608, 65527, 0, 537067520, 65531, 0, 1073938432, 65541, 0, 196608, 131063, 0, -2147287040, 131067, 0, 1610809344, 131077, 0, 1073938432, 196599, 0, 1610809344, 196603, 0, 537067520, -65531, 0, -536674304, -9, 0, -536674304, -5, 0, 1073938432, 65527, 1, -1610416128, 65531, 1, 1610809344, 131063, 1, 196608, 131067, 1, -1610416128, 196599, 1, -2147287040, 196603, 1, 1073938432, -9, 1, -1073545216, -5, 1, -536674304, 65527, 2, -2147287040, 65531, 2, -1610416128, 131063, 2, -536674304, 131067, 2, -1073545216, 196599, 2, 537067520, 196603, 2, -1610416128, -9, 2, -1610416128, -5, 2, 1610809344, 65527, 3, -2147287040, 65531, 3, -1610416128, 131063, 3, 537067520, 131067, 3, -1073545216, 196599, 3, -536674304, 196603, 3, -536674304, -9, 3, 196608, -5, 3, -2147287040, 65527, 4, 1610809344, 65531, 4, -1073545216, 131063, 4, 1610809344, 131067, 4, 1610809344, 196599, 4, 537067520, 196603, 4, 196608, -65541, 4, -536674304, -9, 4, 196608, -5, 4, -536674304, 65527, 5, 196608, 65531, 5, 196608, 131063, 5, -536674304, 131067, 5, 196608, 196599, 5, 196608, 196603, 5, 196608, -65541, 5, 537067520, -9, 5, 196608, -5, 5, 196608, 65531, 6, 196608, 131067, 6, 196608, 196603, 6, 196608, -5, 6, 196608, 65527, 65530, 720896, 65531, 65530, 720896, 131063, 65530, -536150016, 131067, 65530, -536150016, 196599, 65530, 720896, 196603, 65530, -536150016, -5, 65530, 196608, 65527, 65531, -536674304, 65531, 65531, -536674304, 131063, 65531, 196608, 131067, 65531, 196608, 196599, 65531, 196608, 196603, 65531, 196608, -9, 65531, -536674304, -5, 65531, 196608, 65527, 65532, 196608, 65531, 65532, 196608, 131063, 65532, 196608, 131067, 65532, 196608, 196599, 65532, -536674304, 196603, 65532, -536674304, -9, 65532, 196608, -5, 65532, 196608, 5, 65533, 196608, 65527, 65533, -536674304, 65531, 65533, 196608, 65541, 65533, 196608, 131063, 65533, 196608, 131067, 65533, 196608, 131077, 65533, -536674304, 196599, 65533, 196608, 196603, 65533, 196608, -65531, 65533, 196608, -9, 65533, 196608, -5, 65533, 196608, 5, 65534, 1507328, 65527, 65534, -536674304, 65531, 65534, -536674304, 131063, 65534, 196608, 131067, 65534, 196608, 131077, 65534, 196608, 196599, 65534, 196608, 196603, 65534, 196608, -9, 65534, 196608, -5, 65534, 196608, 5, 65535, 196608, 65527, 65535, -536674304, 65531, 65535, 1507328, 131063, 65535, -536674304, 131067, 65535, 1507328, 131077, 65535, 196608, 196599, 65535, 196608, 196603, 65535, -536674304, -65531, 65535, 196608, -9, 65535, -536674304 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 5, 0, -4 )
}

[node name="ZGrid" type="GridMap" parent="."]
mesh_library = ExtResource( 7 )
cell_size = Vector3( 12, 12, 12 )
cell_center_z = false
data = {
"cells": PoolIntArray( 65527, 6, 917504, 65528, 6, 917504, 65529, 6, 917504, 65530, 6, 917504, 131063, 6, 917504, 131064, 6, 917504, 131065, 6, 917504, 131066, 6, 917504, 196599, 6, 917504, 196600, 6, 917504, 196601, 6, 917504, 196602, 6, -535953408, -9, 6, -535953408, -8, 6, 917504, -7, 6, 917504, -6, 6, 917504, 0, 7, 786432, 1, 7, 786432, 2, 7, 786432, 3, 7, 786432, 65531, 7, 786432, 65532, 7, 786432, 65533, 7, 786432, 65534, 7, 786432, 65535, 7, 786432, 65536, 7, 786432, 65537, 7, 786432, 65538, 7, 786432, 65539, 7, 786432, 131067, 7, -536084480, 131068, 7, 786432, 131069, 7, 786432, 131070, 7, 786432, 131071, 7, 786432, 131072, 7, 786432, 131073, 7, 786432, 131074, 7, -536084480, 131075, 7, 786432, 196603, 7, 786432, 196604, 7, -536084480, 196605, 7, -536084480, 196606, 7, -536084480, 196607, 7, -536084480, -65536, 7, -536084480, -65535, 7, 786432, -65534, 7, -536084480, -65533, 7, -536084480, -5, 7, 786432, -4, 7, 786432, -3, 7, 786432, -2, 7, 786432, -1, 7, -536084480, 65527, 65530, -535953408, 65528, 65530, 917504, 65529, 65530, 917504, 65530, 65530, 917504, 131063, 65530, 917504, 131064, 65530, 917504, 131065, 65530, 917504, 131066, 65530, -535953408, 196599, 65530, 917504, 196600, 65530, -535953408, 196601, 65530, 917504, 196602, 65530, -535953408, -9, 65530, 917504, -8, 65530, 917504, -7, 65530, 917504, -6, 65530, 917504, 0, 65532, 786432, 1, 65532, -536084480, 2, 65532, 786432, 65531, 65532, 327680, 65532, 65532, 786432, 65533, 65532, 786432, 65534, 65532, 786432, 65535, 65532, 786432, 65536, 65532, 786432, 65537, 65532, 786432, 65538, 65532, 786432, 131067, 65532, -536543232, 131068, 65532, -536084480, 131069, 65532, 786432, 131071, 65532, 786432, 131072, 65532, -535953408, 131073, 65532, 917504, 131074, 65532, 917504, 196603, 65532, 917504, 196604, 65532, 917504, 196605, 65532, 917504, 196606, 65532, 917504, 196607, 65532, 917504, -65536, 65532, 786432, -65535, 65532, 786432, -65534, 65532, -536084480, -5, 65532, 327680, -4, 65532, 786432, -3, 65532, -536084480, -2, 65532, -536084480, -1, 65532, 786432, 3, 65533, 786432, 4, 65533, -536084480, 5, 65533, 786432, 65539, 65533, 786432, 65540, 65533, -536084480, 65541, 65533, 786432, 131075, 65533, -536084480, 131076, 65533, -536084480, -65533, 65533, -1609826304, -65532, 65533, 786432, -65531, 65533, -1072955392 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 1, 0, -3 )
}

[node name="Floor" type="GridMap" parent="."]
mesh_library = ExtResource( 7 )
cell_size = Vector3( 12, 12, 12 )
cell_center_y = false
data = {
"cells": PoolIntArray( -65536, 0, 1073741824, -65535, 0, 0, -65534, 0, -2147483648, -65533, 0, -2147483648, -65532, 0, 1610612736, -65531, 0, 1073741824, -65530, 0, -2147483648, -65529, 0, 0, -65528, 0, -1610612736, -10, 0, 537395200, -9, 0, 537395200, -8, 0, 537395200, -7, 0, -2146959360, -6, 0, 1611137024, -5, 0, 537395200, -4, 0, -1073217536, -3, 0, 1610612736, -2, 0, -536870912, -1, 0, 1073741824, -65536, 1, 536870912, -65535, 1, -1610612736, -65534, 1, 536870912, -65533, 1, 0, -65532, 1, -1610612736, -65531, 1, -536870912, -65530, 1, 0, -65529, 1, -2147483648, -65528, 1, 0, -10, 1, 1074266112, -9, 1, -2146959360, -8, 1, -1073217536, -7, 1, -1610088448, -6, 1, 1611137024, -5, 1, -1073217536, -4, 1, -1610612736, -3, 1, 536870912, -2, 1, -536870912, -1, 1, 1073741824, -65536, 2, -536870912, -65535, 2, 1073741824, -65534, 2, 0, -65533, 2, 0, -65532, 2, -2147483648, -65531, 2, 1610612736, -65530, 2, -1610612736, -65529, 2, -2147483648, -65528, 2, 1610612736, -10, 2, -2146959360, -9, 2, 1074266112, -8, 2, 537395200, -7, 2, -2146959360, -6, 2, -536346624, -5, 2, 537395200, -4, 2, 537395200, -3, 2, -536870912, -2, 2, -1073741824, -1, 2, -536870912, -65536, 3, 0, -65535, 3, -1610612736, -65534, 3, -1073741824, -65533, 3, 1610612736, -65532, 3, -1610612736, -65531, 3, -536870912, -65530, 3, 0, -65529, 3, -2147483648, -65528, 3, -536870912, -10, 3, 537395200, -9, 3, 1074266112, -8, 3, 1611137024, -7, 3, 1611137024, -6, 3, -2146959360, -5, 3, 1074266112, -4, 3, 537395200, -3, 3, -1073741824, -2, 3, 1073741824, -1, 3, -2147483648, -65536, 4, -1610612736, -65535, 4, 1073741824, -65534, 4, 0, -65533, 4, -536870912, -65532, 4, -1610612736, -65531, 4, -1610612736, -65530, 4, 1610612736, -65529, 4, 1610612736, -65528, 4, 0, -65527, 4, -1610612736, -10, 4, 1611137024, -9, 4, -2146959360, -8, 4, 1074266112, -7, 4, 1074266112, -6, 4, -536346624, -5, 4, 524288, -4, 4, -536870912, -3, 4, 0, -2, 4, -1073741824, -1, 4, 536870912, -65536, 5, -1610612736, -65535, 5, -1610612736, -65534, 5, -2147483648, -65533, 5, -1610612736, -65532, 5, -1610612736, -65531, 5, -536870912, -65530, 5, -2147483648, -65529, 5, -2147483648, -65528, 5, -1073741824, -10, 5, -536346624, -9, 5, -2146959360, -8, 5, 537395200, -7, 5, -536346624, -6, 5, -2146959360, -5, 5, 1074266112, -4, 5, -536870912, -3, 5, 1073741824, -2, 5, 536870912, -1, 5, -536870912, -65536, 6, 0, -65535, 6, -1610612736, -65534, 6, -2147483648, -65533, 6, -1610612736, -10, 6, 537395200, -9, 6, -536346624, -8, 6, -2146959360, -7, 6, -2146959360, -6, 6, -2146959360, -5, 6, -1610088448, -4, 6, -2147483648, -3, 6, 1073741824, -2, 6, 536870912, -1, 6, 0, -10, 7, -536346624, -9, 7, 1611137024, -8, 7, -2146959360, 65536, 65530, -1072431104, 65537, 65530, 1075052544, 65538, 65530, 1310720, 131067, 65530, 1611923456, 131068, 65530, -1609302016, 131069, 65530, -1609302016, 131070, 65530, 1310720, 131071, 65530, 538181632, -10, 65530, -536346624, -9, 65530, -1610088448, -8, 65530, 1611137024, -7, 65530, -1073217536, -6, 65530, -1610088448, -5, 65530, -1073217536, 65536, 65531, 1611923456, 65537, 65531, 1611923456, 65538, 65531, 1611923456, 131067, 65531, -2146172928, 131068, 65531, -2146172928, 131069, 65531, 1310720, 131070, 65531, 538181632, 131071, 65531, 1075052544, -10, 65531, -2146959360, -9, 65531, -1073217536, -8, 65531, -536346624, -7, 65531, -536346624, -6, 65531, -536346624, -5, 65531, -536346624, -65536, 65532, -536870912, -65535, 65532, -536870912, -65534, 65532, -536870912, -10, 65532, -536346624, -9, 65532, -536346624, -8, 65532, -536346624, -7, 65532, -536346624, -6, 65532, -536346624, -5, 65532, -536346624, -4, 65532, -536870912, -3, 65532, -536870912, -2, 65532, -536870912, -1, 65532, -536870912, -65536, 65533, -536870912, -65535, 65533, -536870912, -65534, 65533, -536870912, -65533, 65533, -536870912, -65532, 65533, -536870912, -65531, 65533, -536870912, -10, 65533, -536346624, -9, 65533, -536346624, -8, 65533, -536346624, -7, 65533, -536346624, -6, 65533, -536346624, -5, 65533, -536346624, -4, 65533, -536870912, -3, 65533, -536870912, -2, 65533, -536870912, -1, 65533, -536870912, -65536, 65534, 536870912, -65535, 65534, -536870912, -65534, 65534, -536870912, -65533, 65534, -536870912, -65532, 65534, -536870912, -65531, 65534, -536870912, -65530, 65534, -536870912, -65529, 65534, -536870912, -10, 65534, -536346624, -9, 65534, -536346624, -8, 65534, -536346624, -7, 65534, -536346624, -6, 65534, -536346624, -5, 65534, -536346624, -4, 65534, -536870912, -3, 65534, -536870912, -2, 65534, -536870912, -1, 65534, -536870912, -65536, 65535, -536870912, -65535, 65535, -536870912, -65534, 65535, -536870912, -65533, 65535, -536870912, -65532, 65535, -536870912, -65531, 65535, -536870912, -65530, 65535, -536870912, -65529, 65535, -536870912, -65528, 65535, -536870912, -10, 65535, -536346624, -9, 65535, -536346624, -8, 65535, -536346624, -7, 65535, -536346624, -6, 65535, -536346624, -5, 65535, -536346624, -4, 65535, -536870912, -3, 65535, -536870912, -2, 65535, -536870912, -1, 65535, -536870912 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( -9, 1, 0 )
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 12 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -83.0617, 150.387, 9.22607 )
light_color = Color( 0.644196, 0.707575, 0.789063, 1 )
light_energy = 3.0
shadow_enabled = true
shadow_bias = 0.68
omni_range = 488.296

[node name="Gary" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.52113, 0.98772 )
script = ExtResource( 9 )

[node name="Capsule" type="CollisionShape" parent="Gary"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0, 0 )
shape = SubResource( 13 )

[node name="Head" type="Spatial" parent="Gary"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="Camera" type="Camera" parent="Gary/Head"]
far = 200.0

[node name="Tail" type="RayCast" parent="Gary"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.49056, 0 )
enabled = true
cast_to = Vector3( 0, -0.4, 0 )

[node name="StairCatcher" type="RayCast" parent="Gary"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.72281, -0.627817 )
enabled = true
cast_to = Vector3( 0, -0.4, 0 )

[node name="Lights" type="Spatial" parent="."]
editor/display_folded = true

[node name="Light" parent="Lights" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00164032, 12.1115, -46.5787 )

[node name="Light2" parent="Lights" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.8483, 12.029, -46.5616 )

[node name="Light10" parent="Lights" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.8483, 12.029, 81.5754 )

[node name="Light3" parent="Lights" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27.412, 12.029, -46.5616 )

[node name="Light4" parent="Lights" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -38.6008, 12.1115, -46.5787 )

[node name="Light5" parent="Lights" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -57.984, 12.029, -27.1096 )

[node name="Light6" parent="Lights" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -61.4058, 12.029, -27.1096 )

[node name="Light7" parent="Lights" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -106.217, 12.029, -27.1096 )
[connection signal="body_entered" from="Ladder/Area" to="Gary" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Ladder/Area" to="Gary" method="_on_Area_body_exited"]
